# profile.wearable.platform.core.uifw.e-tizen-data

./: AUTHORS  Makefile.am  configure.ac  project.config
aarch64/backgrounds/: Makefile.am
aarch64/config/: Makefile.am
aarch64/config/tizen-wearable/: Makefile.am  e.src
arm/backgrounds/: Makefile.am
arm/config/: Makefile.am
arm/config/tizen-wearable/: Makefile.am  e.src
data/: Makefile.am
data/backgrounds/: Makefile.am
data/units/: display-manager.service  enlightenment
default/: Makefile.am
default/backgrounds/: Makefile.am
default/config/: Makefile.am
default/config/tizen-wearable/: Makefile.am  e.src.in  e_bindings.src.in  e_comp.src.in  make_keymap_conf.sh  module.devicemgr.src  module.gesture.src  module.keyrouter.src  module.policy-tizen.src
default/systemd/: Makefile.am
default/systemd/wayland/: display-manager-run.service  display-manager.path  display-manager.service
default/systemd/x11/: enlightenment.service
default/themes/: Makefile.am  default.edc  launch.edc
default/themes/edc/: comp.edc
default/wayland/: display-manager-run.service  display-manager.path  display-manager.service  enlightenment  enlightenment-user.service  enlightenment.service  enlightenment.sh  enlightenment_tmpfiles.conf  tizen_key_layout.txt
default/x11/: enlightenment.service
emulator/backgrounds/: Black_Screen.edc  Makefile.am
emulator/config/: Makefile.am
emulator/config/tizen-wearable/: Makefile.am
i386/: Makefile.am
i386/backgrounds/: Makefile.am
i386/config/: Makefile.am  profile.src
i386/config/tizen-wearable/: Makefile.am  e.src  e_comp.src
keylayout/: tizen_key_layout.txt
packaging/: e-tizen-data.spec
x86_64/: Makefile.am
x86_64/backgrounds/: Makefile.am
x86_64/config/: Makefile.am
x86_64/config/tizen-wearable/: Makefile.am  e.src
