MAINTAINERCLEANFILES = Makefile.in

EET_EET = @eet_eet@

EXTRA_DIST = \
             module.keyrouter.src \
             module.policy-tizen.src \
             e_bindings.src \
             e_comp.src \
             e.src

filesdir = $(prefix)/data/config/tizen-wearable/
files_DATA = \
             module.keyrouter.cfg \
             module.policy-tizen.cfg \
             e_bindings.cfg \
             e_comp.cfg \
             e.cfg

SUFFIXES = .cfg

.src.cfg:
	$(EET_EET) -e \
	$(top_builddir)/default/config/tizen-wearable/$@ config \
	$< 1

clean-local:
	rm -rf *.cfg *~
